--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -2,30 +2,33 @@
 
 <h1>Habits</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Habit</th>
-      <!-- <th>Good days</th>
-      <th>Bad days</th> -->
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <table class="table table-hover table-striped table-bordered">
 
-  <tbody>
-    <% @habits.each do |habit| %>
-      <tr>
-        <td><%= habit.habit %></td>
-        <!-- <td><%= habit.good_days %></td>
-        <td><%= habit.bad_days %></td> -->
-        <td><%= link_to 'Show', habit %></td>
-        <td><%= link_to 'Edit', edit_habit_path(habit) %></td>
-        <td><%= link_to 'Destroy', habit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <thead>
+        <tr>
+          <!-- <th>Habit</th> -->
+          <!-- <th>Good days</th>
+          <th>Bad days</th> -->
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @habits.each do |habit| %>
+          <tr>
+            <td><%= habit.habit %></td>
+            <td><button type="button" onclick="addDay()">Did it</button></td>
+            <td id="gd"><%= habit.good_days %></td>
+            <!-- <td><%= habit.bad_days %></td> -->
+            <!-- <td><%= link_to 'Show', habit %></td>
+            <td><%= link_to 'Edit', edit_habit_path(habit) %></td>
+            <td><%= link_to 'Destroy', habit, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+          </tr>
+        <% end %>
+      </tbody>
+
+  </table>
 
 <br>
 
-<%= link_to 'New Habit', new_habit_path %>
+<button type="button" name="button"><%= link_to 'New Habit', new_habit_path %></button>
