--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <script>
         function addDay() {
           console.log("click");
-          // document.getElementById('gd') == 10;
+          x = document.getElementById('gd').value;
+          console.log(x);
         }
     </script>
 
