--- a/app/views/habits/_form.html.erb
+++ b/app/views/habits/_form.html.erb
@@ -16,10 +16,10 @@
     <%= form.text_field :habit, id: :habit_habit %>
   </div>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= form.label :good_days %>
     <%= form.number_field :good_days, id: :habit_good_days%>
-  </div>
+  </div> -->
 
   <!-- <div class="field">
     <%= form.label :bad_days %>
